[gd_scene load_steps=8 format=2]

[ext_resource path="res://Misc/extrude.tres" type="DynamicFont" id=1]
[ext_resource path="res://CompleteScripts/Control.gd" type="Script" id=2]
[ext_resource path="res://Misc/black.jpg" type="Texture" id=3]
[ext_resource path="res://CompleteScripts/Popup.gd" type="Script" id=4]
[ext_resource path="res://CompleteScene/displayMutation.gd" type="Script" id=5]
[ext_resource path="res://CompleteScene/statsMenu.gd" type="Script" id=6]
[ext_resource path="res://CompleteScene/saveMenu.gd" type="Script" id=7]

[node name="UI_Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 48.0
margin_right = -16.0
margin_bottom = -13.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 427, 520 )
scale = Vector2( 0.223849, 0.0876605 )
texture = ExtResource( 3 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 228.0
margin_top = 471.0
margin_right = 634.0
margin_bottom = 580.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="ToolButton" parent="HBoxContainer2"]
margin_left = 49.0
margin_right = 166.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 1 )
text = "Mutations"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="HBoxContainer2"]
margin_left = 170.0
margin_right = 237.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 1 )
text = "Stats"
flat = true

[node name="Button2" type="Button" parent="HBoxContainer2"]
margin_left = 241.0
margin_right = 297.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 1 )
text = "Save"
flat = true

[node name="ButtoN4" type="Button" parent="HBoxContainer2"]
margin_left = 301.0
margin_right = 357.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 1 )
text = "Quit"
flat = true

[node name="Popup" type="PopupMenu" parent="."]
margin_left = 230.0
margin_top = 178.0
margin_right = 595.0
margin_bottom = 368.0
rect_pivot_offset = Vector2( 58, 97 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Popup"]
margin_left = 58.0
margin_top = 17.0
margin_right = 314.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 1 )
text = "list of mutations"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationOne" type="Label" parent="Popup"]
margin_left = 58.0
margin_top = 49.0
margin_right = 122.0
margin_bottom = 65.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationTwo" type="Label" parent="Popup"]
margin_left = 58.0
margin_top = 81.0
margin_right = 122.0
margin_bottom = 97.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationThree" type="Label" parent="Popup"]
margin_left = 58.0
margin_top = 113.0
margin_right = 122.0
margin_bottom = 129.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationFour" type="Label" parent="Popup"]
margin_left = 58.0
margin_top = 145.0
margin_right = 122.0
margin_bottom = 161.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationFive" type="Label" parent="Popup"]
margin_left = 202.0
margin_top = 49.0
margin_right = 266.0
margin_bottom = 65.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationSix" type="Label" parent="Popup"]
margin_left = 202.0
margin_top = 81.0
margin_right = 266.0
margin_bottom = 97.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationSeven" type="Label" parent="Popup"]
margin_left = 202.0
margin_top = 113.0
margin_right = 266.0
margin_bottom = 129.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationEight" type="Label" parent="Popup"]
margin_left = 202.0
margin_top = 145.0
margin_right = 266.0
margin_bottom = 161.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statsMenu" type="PopupDialog" parent="."]
margin_left = 288.0
margin_top = 179.0
margin_right = 592.0
margin_bottom = 390.0
rect_pivot_offset = Vector2( 80, 32 )
script = ExtResource( 6 )

[node name="Label" type="Label" parent="statsMenu"]
margin_left = 96.0
margin_right = 192.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "Stats"
align = 1
valign = 1

[node name="Population" type="Label" parent="statsMenu"]
margin_left = 16.0
margin_top = 48.0
margin_right = 137.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 1 )
text = "Population:"

[node name="Damage" type="Label" parent="statsMenu"]
margin_left = 16.0
margin_top = 112.0
margin_right = 97.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 1 )
text = "Damage:"

[node name="Health" type="Label" parent="statsMenu"]
margin_left = 16.0
margin_top = 80.0
margin_right = 92.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 1 )
text = "Health:"

[node name="Speed" type="Label" parent="statsMenu"]
margin_left = 16.0
margin_top = 144.0
margin_right = 79.0
margin_bottom = 164.0
custom_fonts/font = ExtResource( 1 )
text = "Speed:"

[node name="Weight" type="Label" parent="statsMenu"]
margin_left = 16.0
margin_top = 176.0
margin_right = 186.0
margin_bottom = 196.0
custom_fonts/font = ExtResource( 1 )
text = "Weight Capacity:"

[node name="popnum" type="Label" parent="statsMenu"]
margin_left = 208.0
margin_top = 48.0
margin_right = 260.0
margin_bottom = 62.0

[node name="healthnum" type="Label" parent="statsMenu"]
margin_left = 208.0
margin_top = 80.0
margin_right = 260.0
margin_bottom = 94.0

[node name="dmgnum" type="Label" parent="statsMenu"]
margin_left = 208.0
margin_top = 112.0
margin_right = 260.0
margin_bottom = 126.0

[node name="speednum" type="Label" parent="statsMenu"]
margin_left = 208.0
margin_top = 144.0
margin_right = 260.0
margin_bottom = 158.0

[node name="weightnum" type="Label" parent="statsMenu"]
margin_left = 208.0
margin_top = 176.0
margin_right = 260.0
margin_bottom = 190.0

[node name="saveMenu" type="PopupDialog" parent="."]
margin_left = 272.0
margin_top = 208.0
margin_right = 576.0
margin_bottom = 432.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="saveMenu"]
margin_left = 128.0
margin_top = 32.0
margin_right = 202.0
margin_bottom = 56.0

[node name="Button" type="Button" parent="saveMenu"]
margin_left = 48.0
margin_top = 112.0
margin_right = 256.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 1 )
text = "Save "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="saveMenu"]
margin_left = 64.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )
text = "ID"
align = 1
valign = 1

[connection signal="pressed" from="HBoxContainer2/Button4" to="Popup" method="_on_Button4_pressed"]
[connection signal="pressed" from="HBoxContainer2/Button3" to="statsMenu" method="_on_Button3_pressed"]
[connection signal="pressed" from="HBoxContainer2/Button2" to="saveMenu" method="_on_Button2_pressed"]
[connection signal="pressed" from="HBoxContainer2/ButtoN4" to="." method="_on_ButtoN4_pressed"]
[connection signal="pressed" from="saveMenu/Button" to="saveMenu" method="_on_Button_pressed"]
